# path_planning

./: .gitignore  CMakeLists.txt  package.xml  recipe.def  requirements.txt  rs.txt  rt.txt  setup.py
launch/: pcl_realsense_front.launch  projection3D.launch  start_astar.launch  start_astart_mission.launch  start_mission.launch  start_rl.launch  start_test.launch
msg/: Sphere.msg  SphereCloud.msg
rviz/: 3d_lidar2d.rviz
src/: astar.py  evaluations.npz  geometry.py  grid_map.py  hector.py  hyperparams_optuna.py  kill.sh  kill_all.sh  map_environment.py  movements.py  path_planner.py  planning.py  ros_macros.sh  run_train.sh  start.py  start_any_test.py  start_astar.py  start_classic_path_planner.py  start_classic_path_planner_3D.py  start_mrs.py  start_optimize_hyperparams.py  start_rl.py  start_rl_dqn.py  start_rl_ppo.py  start_rl_ppo_obs.py  start_rl_sbx.py  start_rl_v1.py  start_test.py  trajectory.py  uav.py  uav_info.py  uavinfo.py
src/RL_path_planner/: fspp_env.py  fspp_env_v0.py  fspp_env_v1.py  fspp_env_v3.py  fspp_env_v3_CNT.py  fspp_env_v4_empty.py  kill.sh  optimize_hp.py  optimize_hp.py.txt  ros_waiter.py
src/RL_path_planner/worlds/: probabilistics_forest.py
src/RL_path_planner/worlds/base/: forest.world
src/RL_path_planner/worlds/probabilistics/: forest.world
src/astar/: astar.py  astar3D.py  astar3D_GridMap3D.py  astar_cn.py  path_planner.py
src/aux/: normal_distribution.py  statistics.py  train_statistics.ipynb
src/aux/experiments/classical/: Teste 1.csv  ex5_cen_1.csv
src/classic_path_planner/: astar.hpp  astar.py  astar_coverage.py  global_planner.py  local_planner.py  path_planner.py
src/classic_path_planner/astar/: astar.cpp  astar.hpp  discrete_grid.hpp  node.hpp  point.hpp
src/classic_path_planner/astar3D/: astar.py  path_planner.py
src/classical_path_planner/: astar.py
src/classical_path_planner/astar/: astar.hpp  discrete_grid.hpp  node.hpp
src/dqn_fsppenv_log/: progress.csv
src/geometry/: discrete_grid.py  geometry.py  grid_map.py  grid_map3D.py  kdtree.py  laser_geometry.py  octomap.py
src/ppo_fsppenv_log/: progress.csv
src/uav/: map_environment.py  movements.py  position_collector.py  uav.py  uav_info.py
src/uav_interface/: cam.py  map_environment.py  movements.py  position_collector.py  ros_rplidar.py  ros_spheres_obstacles.py  uav.py  uav_info.py
srv/: Astar.srv
start/: .tmuxinator.yml
start/astar/: out.txt  rosservice_astar.txt  rostopic_astar.txt  rostopic_list.txt  rviz.rviz  session.yml  tf.txt
start/astar/custom_configs/: constraint_manager.yaml
start/astar_realsense/: session.yml  start.sh
start/astar_realsense/custom_configs/: uav_manager.yaml
start/forest/: pos.yaml  rviz.rviz  session.yml
start/forest/custom_configs/: control_manager.yaml  octomap.yaml  odometry.yaml  uav_manager.yaml
start/grass_plane/: session.yml
start/simulation_example/: .tmuxinator.yml  octomap_local_binary.txt  out.txt  out_octomap.txt  rosservice_list.txt  rostopic_list.txt  session.yml  test.txt
start/simulation_example/custom_configs/: octomap.yaml  pathfinder.yaml  trajectory_generation.yaml
trajectories/: trajectory1.txt  trajectory2.txt  trajectory3.txt
worlds/: city.world  tree_scenario_1.world  tree_scenario_2.world  tree_scenario_3.world
