<?xml version="1.0"?>
<package format="2">
  <name>fs_path_planning</name>
  <version>0.0.0</version>
  <description>The fs_path_planning package</description>

  <maintainer email="fsilva.cpp@gmail.com">Filipe Silva</maintainer>

  <license>TODO</license>

  <depend>rospy</depend>
  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <author email="fsilva.cpp@gmail.com">Filipe Silva</author>
  <author email="msimoes@uneb.br">Marco Simões</author>

  <export>

  </export>
</package>
